# area51_apiservices

./: .gitignore  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  temp.txt  test.py
api_services/: asgi.py  celery.py  newrelic.ini  routing.py  urls.py  wsgi.py
api_services/settings/: base.py  local.py  production.py
apps/acuitytec/: acuitytec.py  apps.py  logger.py  models.py  tasks.py  urls.py  utils.py  views.py
apps/admin_panel/: apps.py  context_processors.py  force_default_language_middleware.py  forms.py  middleware.py  payments.py  tasks.py  urls.py  utils.py  validators.py  views.py
apps/admin_panel/templatetags/: date_utils.py  math.py  navigate.py  permissions.py
apps/bets/: .serializers.py.swp  .views.py.swo  .views.py.swp  consumers.py  filters.py  models.py  repository.py  routing.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/bets/services/: wagering.py
apps/bets/templatetags/: bet_extras.py
apps/bets/tests/: test_wagering.py
apps/casino/: casino25.py  cpgames.py  custom_pagination.py  gsoft.py  internal_utils.py  models.py  onegamehub.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/casino/clients/: RefujiClient.py
apps/casino/management/: CPgames_gamelist.py
apps/casino/tests/: test_cpgames_connection.py  test_cpgames_login.py  test_onegamehub.py
apps/core/: auth_mixins.py  authentication_backends.py  coins.py  concurrency.py  country_language.py  custom_refresh_token.py  custom_types.py  exceptions.py  file_logger.py  jwt_token_authentication.py  models.py  pagination.py  permissions.py  rate_limiter.py  renderers.py  rest_any_permissions.py  urls.py  utils.py  views.py
apps/dynamo/: custom_storage.py  urls.py
apps/payments/: .views.py.swp  coinflow.py  mnet.py  models.py  repository.py  serializers.py  service.py  urls.py  utils.py  views.py
apps/users/: acuitytec.py  admin.py  apps.py  config_handler.py  consumers.py  filters.py  fixture.py  forms.py  fortunepandas.py  models.py  promo_handler.py  repository.py  routing.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
static/css/: style.css
static/datetimepicker/: link.txt
templates/: 403.html  email_signup_template.html  email_template.html  exit_game.html  header.html  home.html  home_.html  index.html  login.html  test_game.html
templates/admin/: WD.html  add_casino_categories.html  admins.html  ads_sponser.html  affiliate_email.html  affiliate_requests.html  banner.html  bonuses.html  cash_app.html  casino-management.html  casino_category_header_management.html  create-admin.html  create_ads_sponser.html  create_banner.html  edit_admin_banner.html  edit_ads_sponser.html  edit_note.html  edit_provider_casino_management.html  fortunepandas-management.html  mobile_banner.html  pendingwithdrawals.html  pendingwithdrawals_old.html  provider_casino_management.html  settings.html  show_notes.html  staff_wallet_and_transactions.html  unresolved_queries.html  withdrawal_currencies.html
templates/components/: charjs.html
templates/includes/: betting_limits_popup.html  messages.html  pagination.html  transactions.html
templates/offmarkets/: create_game.html  edit_game.html  games.html  offmarket_withdrawal_requests.html  rejection_mail.html
templates/profit/: profit.html
templates/report/: alchemypay_report.html  bonus_transactions_report.html  cash_app.html  casino_betslip_report.html  coinflow_report.html  mnet_report.html  nowpayments_report.html  offmarket_report.html  transaction_report.html
templates/transactions/: transactions.html
(+195 files in other folders)
