[project]
name = "area51-apiservices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.10"
dependencies = [
    "asgiref==3.3.4",
    "asn1crypto>=1.5.1",
    "boto3>=1.37.38",
    "botocore>=1.37.38",
    "cryptography>=46.0.3",
    "django==2.2",
    "django-prometheus==2.2.0",
    "pyhanko>=0.27.1",
    "pyopenssl>=25.3.0",
    "pypdf>=5.9.0",
    "pyright>=1.1.407",
    "python-lsp-server[mypy]>=1.12.2",
    "pytz==2021.1",
    "reportlab<4.0",
    "service-identity>=24.2.0",
    "setuptools>=75.3.2",
    "sqlparse==0.4.1",
    "xhtml2pdf>=0.2.11",
]

