[project]
name = "area51-apiservices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.10"
dependencies = [
    "aioredis==1.3.1",
    "asgiref==3.3.4",
    "asn1crypto>=1.5.1",
    "auditlog3==1.0.1",
    "boto3>=1.37.38",
    "botocore>=1.37.38",
    "celery==4.2.1",
    "channels==2.4.0",
    "channels-redis==3.0.0",
    "click-didyoumean==0.0.3",
    "click-plugins==1.1.1",
    "click-repl==0.1.6",
    "coverage==4.5.2",
    "cryptography>=46.0.3",
    "deepmerge==0.1.0",
    "django==2.2",
    "django-3-jet==1.0.8",
    "django-background-tasks==1.2.5",
    "django-braces==1.14.0",
    "django-celery-results==1.0.4",
    "django-choices==1.7.1",
    "django-ckeditor==6.3.0",
    "django-coinpayments==0.1.3",
    "django-compat==1.0.15",
    "django-cors-headers==2.2.0",
    "django-crontab==0.7.1",
    "django-debug-toolbar==2.2",
    "django-debug-toolbar-request-history==0.0.7",
    "django-dotenv==1.4.2",
    "django-excel-response==2.0.5",
    "django-extra-fields==1.0.0",
    "django-filter==2.0.0",
    "django-jet==1.0.8",
    "django-js-asset==2.0.0",
    "django-mathfilters==1.0.0",
    "django-model-utils==4.2.0",
    "django-nose==1.4.6",
    "django-picklefield==2.0",
    "django-prometheus==2.2.0",
    "django-redis==4.12.1",
    "django-rest-swagger==2.2.0",
    "django-storages==1.7.1",
    "django-tinymce==3.6.1",
    "django-user-agents==0.4.0",
    "django-utils-six==2.0",
    "djangorestframework==3.8.2",
    "djangorestframework-jwt==1.11.0",
    "djangorestframework-simplejwt>=5.0.0",
    "drf-yasg==1.10.2",
    "factory-boy==2.11.1",
    "faker==8.3.0",
    "firebase-admin==4.3.0",
    "flex>=6.13.2",
    "flower==0.9.3",
    "google-api-python-client==2.6.0",
    "google-cloud-firestore==2.1.1",
    "gunicorn==20.1.0",
    "h11==0.12.0",
    "html2text==2020.1.16",
    "humanize==3.2.0",
    "ipython==7.30.0",
    "jsondiff==1.2.0",
    "jsonmerge==1.7.0",
    "jsonpointer==1.14",
    "jsonschema==3.2.0",
    "mercadopago==2.0.6",
    "newrelic==5.22.1.152",
    "numpy==1.21.5",
    "pandas==1.3.4",
    "pika==1.1.0",
    "pprintpp==0.4.0",
    "psycopg2-binary==2.8.6",
    "pycryptodome==3.10.1",
    "pyhanko==0.17.2",
    "pynamodb==4.3.2",
    "pyopenssl==25.3.0",
    "pyotp==2.8.0",
    "pypdf>=5.9.0",
    "pyright>=1.1.407",
    "python-crontab==2.3.5",
    "python-lsp-server[mypy]>=1.12.2",
    "pytz==2021.1",
    "pytz-deprecation-shim==0.1.0.post0",
    "pyyaml>=6.0.3",
    "reportlab<4.0",
    "requests-aws4auth==1.1.0",
    "rollbar==0.15.2",
    "sendgrid==6.9.7",
    "service-identity>=24.2.0",
    "setuptools>=75.3.2",
    "sqlparse==0.4.1",
    "swagger-spec-validator==2.3.1",
    "twilio==6.63.0",
    "xhtml2pdf>=0.2.11",
    "xmltodict==0.12.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.33.0",
]

